# vscode_cmake_windows

./: README.md
project/: CMakeLists.txt
project/src/: main.cpp
